# OpenKF

./: .gitmodules  CMakeLists.txt  README.md
.github/: FUNDING.yml
.github/workflows/: clang-format-check.yml
examples/ego_motion_model_adapter/: main.cpp
src/: CMakeLists.txt  types.h
src/kalman_filter/: kalman_filter.h
src/meas_model/: bearing_meas_model.h  meas_model.h  pos2d_meas_model.h  range_bearing_meas_model.h
src/motion_model/: ca_motion_model.cpp  ca_motion_model.h  ct_motion_model.cpp  ct_motion_model.h  cv_motion_model.cpp  cv_motion_model.h  ego_motion_model.cpp  ego_motion_model.h  motion_model.h
tests/unit/: CMakeLists.txt
tests/unit/meas_model/: bearing_meas_model_test.cpp  pos2d_meas_model_test.cpp  range_bearing_meas_model_test.cpp
tests/unit/motion_model/: ca_motion_model_test.cpp  ct_motion_model_test.cpp  cv_motion_model_test.cpp  ego_motion_model_test.cpp  param_motion_model_test.cpp
